here is the first commit

--- a/index.html
+++ b/index.html
@@ -3,23 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Landing Page</title>
 </head>
 <body>
-  <section>
-    <header class="first-hero">
-      <div class="nav">
-        <a href="#">Header Logo</a>
-        <a href="#">Header Nav</a>
-        <a href="#">Header Nav</a>
-        <a href="#">Header Nav</a>
-      </div>
-      <div class="hero-section">
-        <p>This header is awesome</p>
-        <caption>This is some subtext of an awesome website</caption>
-        <img src="/images/chugjug.jpeg" alt="This is a chug jug...mr victory royale">
-      </div>
-    </header>
+  <header class="header--section">
+    <div class="logo">
+      <p>LOGO</p>
+    </div>
+    <nav class="links">
+      <a href="#">Header Link One</a>
+      <a href="#">Header Link Two</a>
+      <a href="#">Header Link Three</a>
+    </nav>
+  </header>
+  <main class="main--section">
+    <div class="text--div">
+      <h1>This website is awesome</h1>
+    <p class="subtext">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower in contrast</p>
+    </div>
+    <button type="button">Sign Up</button>
+    <figure class="image-container">
+      <img src="/images/chugjug.jpeg" alt="chug jug from fortnite">
+    </figure>
+  </main>
+  <section class="second--section">
+    <figure>
+      <img src="/images/fortniteAR.jpg" alt="Fortnite Assault Rifle">
+      <figcaption>Fortnite Assault Rifle</figcaption>
+    </figure>
+    <figure>
+      <img src="/images/fortnitetommy.jpg" alt="Fortnite Tommy Gun">
+      <figcaption>Fortnite Tommy Gun</figcaption>
+    </figure>
+    <figure>
+      <img src="/images/forttactshotty.jpg" alt="Fortnite Tactical Shotgun">
+      <figcaption>Fortnite Tactical Shotgun</figcaption>
+    </figure>
+    <figure>
+      <img src="/images/llamafort.jpg" alt="Fortnite Llama">
+      <figcaption>Fortnite Llama</figcaption>
+    </figure>
+  </section>
+  <section class="third--section">
+    <p>"This is an inspiring quote, or a testimonial from a customer. Maybe It's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice"</p>
+    <p> - Thor, God of Thunder</p>
+  </section>
+  <section class="fourth--section">
+    <div class="CTA--area">
+      <h5> Call to Action! It's time!</h5>
+      <p>Sign up for our product by clicking that button!</p>
+    </div>
+    <div class="CTA--button">
+      <button type="button">Sign Up</button>
+    </div>`
   </section>
 </body>
 </html>
