sorry heres the html footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
     </div>
     <div class="CTA--button">
       <button type="button">Sign Up</button>
-    </div>`
+    </div>
   </section>
+  <footer class="footer--section">
+    <p>kennythedeveloper copyright 2025. `</p>
+  </footer>
 </body>
 </html>
