--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
   </section>
   <footer class="footer--section">
-    <p>kennythedeveloper copyright 2025. `</p>
+    <p>kennythedeveloper copyright 2025. </p>
   </footer>
 </body>
 </html>
