final commit with updated CSS and HTML. used github copiliot for help. Will be using it moving forward but for small things.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <title>Landing Page</title>
 </head>
 <body>
@@ -21,8 +22,8 @@
     <div class="text--div">
       <h1>This website is awesome</h1>
     <p class="subtext">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower in contrast</p>
-    </div>
     <button type="button">Sign Up</button>
+    </div>
     <figure class="image-container">
       <img src="/images/chugjug.jpeg" alt="chug jug from fortnite">
     </figure>
@@ -46,16 +47,20 @@
     </figure>
   </section>
   <section class="third--section">
-    <p>"This is an inspiring quote, or a testimonial from a customer. Maybe It's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice"</p>
-    <p> - Thor, God of Thunder</p>
-  </section>
-  <section class="fourth--section">
-    <div class="CTA--area">
-      <h5> Call to Action! It's time!</h5>
-      <p>Sign up for our product by clicking that button!</p>
+    <div class="quote-container">
+        <p class="quote">"This is an inspiring quote, or a testimonial from a customer. Maybe It's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice"</p>
+        <p class="quote-author">- Thor, God of Thunder</p>
     </div>
-    <div class="CTA--button">
-      <button type="button">Sign Up</button>
+</section>
+  <section class="fourth--section">
+    <div class="CTA--container">
+      <div class="CTA--area">
+        <h5> Call to Action! It's time!</h5>
+        <p>Sign up for our product by clicking that button!</p>
+      </div>
+      <div class="CTA--button">
+        <button type="button">Sign Up</button>
+      </div>
     </div>
   </section>
   <footer class="footer--section">
